# Mascot_ai

./: .gitignore  CONTRIBUTING.md  IssuesFaced.md  MANIFEST.in  PROJECT_MAP.md  README.md  idea.txt  launch_all.bat  launch_all.bat.example  launching.md  pyproject.toml
apps/ai-orchestrator/: .env.example  README.md  main.py  pyproject.toml  test_engine.py
apps/ai-orchestrator/api/: ws_endpoint.py
apps/ai-orchestrator/inference/: engine.py  prompts.py  vision_parser.py
apps/native-host/: App.xaml  App.xaml.cs  DesktopCompanion.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  run_host.ps1  run_host.ps1.example  sign_build.ps1  sign_build.ps1.example
apps/native-host/NativeInterop/: ActiveWindowTracker.cs  ScreenCapture.cs  WindowManagement.cs
apps/native-host/Services/: AIWebSocketClient.cs  WebViewBridge.cs
apps/ui-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/ui-frontend/src/: App.tsx  index.css
apps/ui-frontend/src/components/chat/: ChatBubble.tsx  InputBar.tsx
apps/ui-frontend/src/components/pet/: PetCanvas.tsx  PetModel.tsx
apps/ui-frontend/src/hooks/: useAIStream.ts  useNativeBridge.ts
apps/ui-frontend/src/types/: assets.d.ts  ipc.d.ts
cli/: __init__.py  mascot.py
cli/commands/: __init__.py  build.py  env.py  install.py  start.py  status.py
libs/shared-types/: protocol.ts
mascot_ai/: __init__.py
mascot_ai/cli/: __init__.py  mascot.py
mascot_ai/cli/commands/: __init__.py  env.py  start.py  status.py
scripts/: publish.ps1
